# mfdp

./: .bandit  .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCT_DESCRIPTION.md  README.md  docker-compose.yaml  models.dvc  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg
.dvc/: config
.github/: README.md
.github/workflows/: code-quality.yml  deploy.yml  docker-tests.yml  tests.yml
ml_worker/: Dockerfile  docker-compose.workers.yaml  requirements.txt  worker.py
ml_worker/logs/: .gitkeep
nginx/: nginx.conf
src/: __init__.py  main.py
src/base/: config.py  data_structures.py  dependencies.py  entities.py  exception_handlers.py  exceptions.py  orm.py  utils.py
src/pricing/: __init__.py  model_trainer.py  pricing_service.py  quick_train.py
src/products/adapters/: orm.py  repositories.py
src/products/domain/: models.py
src/products/entrypoints/api/: dependencies.py  endpoints.py
src/products/services/: services.py  task_queue.py  unit_of_work.py
src/tests/: conftest.py  test_db.py  test_e2e.py  test_integration.py  test_ml_model.py  test_task_queue.py  test_unit.py  test_user_api.py
src/users/adapters/: orm.py  repositories.py  repository_impl.py
src/users/domain/: models.py
src/users/entrypoints/api/: dependencies.py  endpoints.py
src/users/services/: services.py  unit_of_work.py
webui/: Dockerfile  main.py  requirements.txt
webui/dashboards/: services.py  sql_tool.py
